# cpp-network-programming-cli-chat-app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
development/get_room_id/include/: getRoomId.h  get_room_id.h
development/get_room_id/src/: getRoomId.cpp
development/global_variables/: global_variables.cpp  global_variables.h
development/helpers/audio_recorder/include/: audio_recorder.h
development/helpers/audio_recorder/src/: audio_recorder.cpp
development/helpers/get_current_time/include/: get_current_time.h
development/helpers/get_current_time/src/: get_current_time.cpp
development/helpers/get_ip_address/include/: get_ip_address.h
development/helpers/get_ip_address/src/: get_ip_address.cpp
development/helpers/get_ip_adress/include/: getIpAdress.h
development/helpers/get_ip_adress/src/: getIpAdress.cpp
development/helpers/get_user_input/include/: get_user_input.h
development/helpers/get_user_input/src/: get_user_input.cpp
development/helpers/getch/include/: getch.h
development/helpers/include/: audio_recorder.h  get_room_id.h  get_user_input.h  is_number.h  join_a_room.h  keep_ip_address_update.h  parse_command.h  parse_request_data.h  parse_server_response.h  parse_user_info.h  play_audio.h  process_incoming_command.h  process_incoming_messages.h  process_input.h  random_bytes.h  receive_audio_with_tcp.h  send_audio_with_tcp.h  send_with_tcp.h  send_with_udp.h  signal_handler.h  update_ip_address.h  write_wav_header.h
development/helpers/join_a_room/include/: join_a_room.h
development/helpers/join_a_room/src/: join_a_room.cpp
development/helpers/keep_ip_address_update/include/: keep_ip_address_update.h
development/helpers/keep_ip_address_update/src/: keep_ip_address_update.cpp
development/helpers/parse_command/include/: parse_command.h
development/helpers/parse_command/src/: parse_command.cpp
development/helpers/parse_server_response/: parse_server_response.cpp  parse_server_response.h
development/helpers/parse_server_response/parse_user_info/: parse_user_info.cpp  parse_user_info.h
development/helpers/process_incoming_command/include/: process_incoming_command.h
development/helpers/process_incoming_command/src/: process_incoming_command.cpp
development/helpers/process_incoming_messages/include/: process_incoming_messages.h
development/helpers/process_incoming_messages/src/: process_incoming_messages.cpp
development/helpers/process_input/include/: process_input.h
development/helpers/process_input/src/: process_input.cpp
development/helpers/process_user_input/include/: process_user_input.h
development/helpers/process_user_input/src/: process_user_input.cpp
development/helpers/random_bytes/include/: random_bytes.h
development/helpers/random_bytes/src/: random_bytes.cpp
development/helpers/send_to_ip/include/: sendToIp.h
development/helpers/send_to_ip/src/: sendToIp.cpp
development/helpers/send_with_tcp/src/: send_with_tcp.cpp
development/helpers/signal_handler/: signal_handler.cpp  signal_handler.h
development/helpers/src/: audio_recorder.cpp  get_current_time.cpp  get_room_id.cpp  get_user_input.cpp  getch.cpp  is_number.cpp  join_a_room.cpp  keep_ip_address_update.cpp  parse_command.cpp  parse_request_data.cpp  parse_server_response.cpp  parse_user_info.cpp  play_audio.cpp  process_incoming_command.cpp  process_incoming_messages.cpp  process_input.cpp  random_bytes.cpp  receive_audio_with_tcp.cpp  send_audio_with_tcp.cpp  send_with_tcp.cpp  send_with_udp.cpp  signal_handler.cpp  to_upper_case.cpp  update_ip_address.cpp  write_wav_header.cpp
development/helpers/to_upper_case/include/: toUpperCase.h  to_upper_case.h
development/helpers/to_upper_case/src/: toUpperCase.cpp
development/helpers/update_ip_address/include/: update_ip_address.h
development/helpers/update_ip_address/src/: update_ip_address.cpp
include/get_ip_adress/: getIpAdress.h
include/get_room_id/: getRoomId.h
include/get_user_id/: getUserId.h
include/getch/: getch.h
include/message/: message.h
include/random_bytes/: random_bytes.h
include/room/: room.h
include/room_member/: roomMember.h
include/send_to_ip/: sendToIp.h
include/to_upper_case/: toUpperCase.h
models/command/include/: command.h
models/command/src/: command.cpp
models/include/: command.h  request_data.h  room.h
models/message/include/: message.h
models/message/src/: message.cpp
models/request_data/include/: request_data.h
models/request_data/src/: request_data.cpp
models/room/include/: room.h
models/room/src/: room.cpp
models/room_member/include/: room_member.h
models/room_member/src/: room_member.cpp
models/src/: room.cpp
src/: main.cpp
src/get_ip_adress/: getIpAdress.cpp
src/get_room_id/: getRoomId.cpp
src/get_user_id/: getUserId.cpp
src/getch/: getch.cpp
src/message/: message.cpp
src/random_bytes/: random_bytes.cpp
src/room/: room.cpp
src/room_member/: room_member.cpp
src/send_to_ip/: sendToIp.cpp
src/to_upper_case/: toUpperCase.cpp
tests/: join_a_room_test.cpp  parse_request_data_test.cpp  send_with_tcp_test.cpp
